test/files/invalid/file_identifier_twice.fbs
file_identifier "FOO";
file_identifier "BAR";